--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/cdk": "^18.2.11",
     "@angular/common": "^18.2.6",
     "@angular/compiler": "^18.2.6",
+    "@angular/core": "^18.2.10",
     "@angular/forms": "^18.2.6",
     "@angular/material": "^16.2.14",
     "@angular/platform-browser": "^18.2.6",
