--- a/angular.json
+++ b/angular.json
@@ -34,8 +34,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -60,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "cpt-web:build:production"
+              "buildTarget": "cpt-web:build:production"
             },
             "development": {
-              "browserTarget": "cpt-web:build:development"
+              "buildTarget": "cpt-web:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -71,7 +71,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "cpt-web:build"
+            "buildTarget": "cpt-web:build"
           }
         },
         "test": {
