--- a/nginx.conf
+++ b/nginx.conf
@@ -8,8 +8,8 @@ http {
         listen              443 ssl;
         server_name         cpt-web;
         keepalive_timeout   70;
-        ssl_certificate     rootCA.crt;
-        ssl_certificate_key rootCA.key;
+        ssl_certificate     rootCA-cpt-web.crt;
+        ssl_certificate_key rootCA-cpt-web.key;
         ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         root                /usr/share/nginx/html;
