--- a/nginx.conf
+++ b/nginx.conf
@@ -14,8 +14,16 @@ http {
         ssl_ciphers         HIGH:!aNULL:!MD5;
         root                /usr/share/nginx/html;
         index               index.html;
+         location = /favicon.ico {
+        access_log off;
+        log_not_found off;
+        }
         location / {
-            try_files $uri $uri/ /index.html;
+        proxy_pass http://localhost:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
