--- a/nginx.conf
+++ b/nginx.conf
@@ -14,9 +14,9 @@ http {
         ssl_ciphers         HIGH:!aNULL:!MD5;
         root                /usr/share/nginx/html;
         index               index.html;
-         location = /favicon.ico {
-         access_log off;
-         log_not_found off;
+        location / {
+            root /usr/share/nginx/html; # Path to the folder where your files are located
+            try_files $uri $uri/ /index.html; # Fallback to index.html for Angular routing
         }
     }
 }
