--- a/nginx.conf
+++ b/nginx.conf
@@ -1,22 +1,13 @@
 events{}
 http {
     include /etc/nginx/mime.types;
-    ssl_session_cache   shared:SSL:10m;
-    ssl_session_timeout 10m;
     server {
-        listen              80;
-        listen              443 ssl;
-        server_name         cpt-web;
-        keepalive_timeout   70;
-        ssl_certificate     rootCA-cpt-web.crt;
-        ssl_certificate_key rootCA-cpt-web.key;
-        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
-        ssl_ciphers         HIGH:!aNULL:!MD5;
-        root                /usr/share/nginx/html;
-        index               index.html;
+        listen 80;
+        server_name cplaneadorestandil.com.ar;
+        root /usr/share/nginx/html;
+        index index.html;
         location / {
-            root /usr/share/nginx/html; # Path to the folder where your files are located
-            try_files $uri $uri/ /index.html; # Fallback to index.html for Angular routing
+            try_files $uri $uri/ /index.html;
         }
     }
 }
