--- a/package.json
+++ b/package.json
@@ -11,29 +11,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.10",
-    "@angular/cdk": "^18.2.11",
-    "@angular/common": "^18.2.10",
-    "@angular/compiler": "^18.2.10",
-    "@angular/core": "^18.2.10",
-    "@angular/forms": "^18.2.10",
-    "@angular/material": "^18.2.11",
-    "@angular/platform-browser": "^18.2.10",
-    "@angular/platform-browser-dynamic": "^18.2.10",
-    "@angular/router": "^18.2.10",
+    "@angular/animations": "^19.2.16",
+    "@angular/cdk": "^19.2.16",
+    "@angular/common": "^19.2.16",
+    "@angular/compiler": "^19.2.16",
+    "@angular/core": "^19.2.16",
+    "@angular/forms": "^19.2.16",
+    "@angular/material": "^19.2.16",
+    "@angular/platform-browser": "^19.2.16",
+    "@angular/platform-browser-dynamic": "^19.2.16",
+    "@angular/router": "^19.2.16",
+    "esbuild": "^0.25.12",
     "rxjs": "~7.8.1",
+    "tmp": "^0.2.5",
     "tslib": "^2.8.1",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.11",
-    "@angular-eslint/builder": "18.4.0",
-    "@angular-eslint/eslint-plugin": "18.4.0",
-    "@angular-eslint/eslint-plugin-template": "18.4.0",
-    "@angular-eslint/schematics": "18.4.0",
-    "@angular-eslint/template-parser": "18.4.0",
-    "@angular/cli": "^18.2.11",
-    "@angular/compiler-cli": "^18.2.10",
+    "@angular-devkit/build-angular": "^19.2.16",
+    "@angular-eslint/builder": "19.0.0",
+    "@angular-eslint/eslint-plugin": "19.0.0",
+    "@angular-eslint/eslint-plugin-template": "19.0.0",
+    "@angular-eslint/schematics": "19.0.0",
+    "@angular-eslint/template-parser": "19.0.0",
+    "@angular/cli": "^19.2.16",
+    "@angular/compiler-cli": "^19.2.16",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
@@ -45,6 +47,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "prettier": "^2.8.8",
-    "typescript": "~5.4.5"
+    "typescript": "~5.5.0"
   }
 }
